force-app/main/default/objects/Backify__SVN__c/Backify__SVN__c.object-meta.xml
<CustomObject>
    <label>SVN</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SVNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>