force-app/main/default/objects/Backify__SVN__c/fields/Backify__Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Backify__Current_Version__c</fullName>
    <description>Current version of the component.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Current version of the component.</inlineHelpText>
    <label>Current Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>