force-app/main/default/objects/Backify__SVN__c/fields/Backify__Last_Modified_by_User__c.field-meta.xml
<CustomField>
    <fullName>Backify__Last_Modified_by_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who last modified the component.</description>
    <inlineHelpText>User who last modified the component.</inlineHelpText>
    <label>Last Modified by(User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SVNs</relationshipName>
    <type>Lookup</type>
</CustomField>