force-app/main/default/objects/Backify__SVN__c/fields/Backify__Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Backify__Last_Modified_Date__c</fullName>
    <description>Date when it was last modified.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when it was last modified.</inlineHelpText>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>