force-app/main/default/objects/Backify__SVN__c/fields/Backify__referenceID__c.field-meta.xml
<CustomField>
    <fullName>Backify__referenceID__c</fullName>
    <description>ID of the component.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ID of the component.</inlineHelpText>
    <label>referenceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>