force-app/main/default/objects/Backify__SVN__c/fields/Backify__Size__c.field-meta.xml
<CustomField>
    <fullName>Backify__Size__c</fullName>
    <description>Size of the current versions code.</description>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>