force-app/main/default/objects/Backify__SVN__c/fields/Backify__Status__c.field-meta.xml
<CustomField>
    <fullName>Backify__Status__c</fullName>
    <description>Status indicating whether the component is active or not.
Active - &gt; backup will be taken on change.
Inactive -&gt; backup will not be taken.</description>
    <inlineHelpText>Status indicating whether the component is active or not.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>