force-app/main/default/objects/Backify__SVN__c/listViews/Backify__All.listView-meta.xml
<ListView>
    <fullName>Backify__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>