force-app/main/default/objects/Backify__SVN__c/listViews/Backify__Apex_Classes.listView-meta.xml
<ListView>
    <fullName>Backify__Apex_Classes</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Backify__Current_Version__c</columns>
    <columns>Backify__Last_Modified_by_User__c</columns>
    <columns>Backify__Last_Modified_Date__c</columns>
    <columns>Backify__referenceID__c</columns>
    <columns>Backify__Size__c</columns>
    <columns>Backify__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>_ApexClass</value>
    </filters>
    <label>Apex Classes</label>
</ListView>